tests/paczka1/small_fuzzy/87182112.err
Error in line 3: DwEu S592 8,2
Error in line 4: QkfWlc S655 35,0
Error in line 10: qngqOetz S829 94,8
Error in line 12: S592 S829 39,0
